[package]
name = "crispy-iptv-tools"
description = "IPTV playlist utilities: filter, merge, dedup, normalize"
version = "0.1.2"
edition = "2024"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/moabualruz/crispy-iptv-tools"
homepage = "https://github.com/moabualruz/crispy-iptv-tools"
documentation = "https://docs.rs/crispy-iptv-tools"
readme = "README.md"
keywords = ["iptv", "playlist", "dedup", "normalize", "transform"]
categories = ["multimedia", "parser-implementations", "command-line-utilities"]
rust-version = "1.85"

[dependencies]
crispy-iptv-types = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
url = "2"
unicode-normalization = "0.1"
